--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
 </head>
 <body>
 
-<h1>🎮 Malla Interactiva – Ingeniería de Software</h1>
-<p>Haz clic en un curso disponible para aprobarlo.</p>
+<h1>Malla Interactiva – Ingeniería de Computación (TEC)</h1>
+<p>Haz clic en un curso <b>disponible</b> para aprobarlo y desbloquear los siguientes.</p>
 
 <div id="malla"></div>
 
+<button onclick="reiniciar()">🔄 Reiniciar progreso</button>
+
 <script src="data.js"></script>
 <script src="app.js"></script>
-<script>render();</script>
+<script>
+  render();
+</script>
 
 </body>
 </html>
