--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Malla Interactiva TEC</title>
+  <title>Ingeniería de Computación TEC</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<h1>Malla Interactiva – Ingeniería de Computación (TEC)</h1>
+<h1>Plan de Estudios Malla Interactiva – Ingeniería de Computación</h1>
 <p>Haz clic en un curso <b>disponible</b> para aprobarlo y desbloquear los siguientes.</p>
 
 <div id="malla"></div>
